disable preventOverscroll, as it's causing unintended side effects (like the inability to scroll the user agreement on the signup view on iOS in portrait orientation: trello #178: https://trello.com/c/qzVMJJs2 )

--- a/src/main/resources/scss/_sidenav.scss
+++ b/src/main/resources/scss/_sidenav.scss
@@ -1,3 +1,8 @@
+.left-off-canvas-menu,
+.right-off-canvas-menu {
+	-webkit-overflow-scrolling: touch;
+}
+
 ul.off-canvas-list {
 	font-family: $sidenav-font-family;
 	li a.navitem {
